--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin-bottom: 50px;
     padding: 0;
 }
+p{
+    color: #0000009e;
+}
 
 .container {
     width: 1170px;
@@ -181,4 +184,257 @@
     border: none;
     border-radius: 5px;
     margin-top: 20px;
+}
+.section5 {
+    width: 1170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 14px;
+    padding: 29px 20px;
+    margin-top: 20px;
+}
+
+.section5 .part1 {
+    flex: 30%;
+}
+
+.section5 .part2 {
+    flex: 40%;
+    text-align: center;
+}
+
+.section5 .part3 {
+    flex: 30%;
+}
+
+.section5 .part1 h4 {
+    margin: 8px 0;
+    color: red;
+    font-family: sans-serif;
+}
+.section5 .part1 h2 {
+    margin: 8px 0;
+    font-size: 37px;
+}
+
+.section5 .part2 img {
+    padding: 17px;
+    border: 10px solid red;
+    border-radius: 50%;
+    width: 235px;
+    margin: auto;
+}
+
+.section5 .part3 h2 {
+    margin: 0;
+    font-size: 37px;
+    color: red;
+    font-family: sans-serif;
+}
+
+.section5 .part1 span {
+    color: #333;
+}
+
+.section5 .part3 span {
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 7px;
+}
+
+.section5 .part3 img {
+    width: 33%;
+    margin: 0;
+}
+
+.section6{
+    text-align: center;
+}
+.section6 span{
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 17px;
+}
+.section6 h1{
+    margin: 5px 0;
+}
+.image_area {
+    display: flex;
+}
+.image_area{
+    height: 266px;
+    margin-left: 35px;
+}
+.image_area .image1{
+    width: 50%;
+    z-index: 1;
+}
+.image_area .image1 img{
+    width: 544px;
+}
+.image_area .image2{}
+.image_area .image2 img{
+    width: 236px;
+}
+.image_area .image3{
+}
+.image_area .image3 img{
+    width: 266px;
+    height: 296px;
+    margin-left: 65px;
+}
+.section6 .image4{}
+.section6 .image4 img{
+    width: 1170px;
+}
+.section7{
+    width: 1170px;
+}
+.section7 span{
+    margin: 0;
+    font-size: 16px;
+    font-family: sans-serif;
+    color: red;
+}
+.section7 h2{
+    margin: 8px 0;
+}
+.section7 p{
+    margin: 0;
+}
+.section7 img{
+    width: 32%;
+    margin: 0;
+    height: 305px;
+    padding: 5px;
+}
+
+.newslater {
+    width: 1170px;
+    background: #e3a2d559;
+    border-radius: 18px;
+    text-align: center;
+    padding: 17px 0;
+}
+
+.newslater img{
+    margin: 0;
+    width: 85px;
+    padding: 17px;
+}
+.newslater h2{
+    margin: 0;
+    padding: 16px;
+    font-size: 35px;
+}
+.newslater p{
+    margin: 0;
+    padding: 0 0 20px 0;
+}
+.newslater .inputSearch input{
+    margin: 0;
+    padding: 12px;
+    border-radius: 20px 0 0 20px;
+    border: none;
+    width: 250px;
+}
+.newslater .inputSearch{
+    margin: 0;
+}
+.newslater .inputSearch button{
+    width: 150px;
+    padding: 12px;
+    border-radius: 0 20px 20px 0;
+    margin-left: -5px;
+    border: none;
+    background: red;
+    color: #fff;
+    font-size: 14px;
+}
+footer {
+    background: #000;
+    padding: 50px;
+}
+.footer{width: 1170px;margin: auto;padding: 0;}
+.footer .footer1{
+    margin: 0;
+}
+.footer .footer1 .leftSide{
+    width: 50%;
+    float: left;
+    margin: 0;
+}
+.footer .footer1 .leftSide span{
+    color: #fff;
+    font-family: sans-serif;
+    margin: 0;
+}
+.footer1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer1 .leftSide span {
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.footer1 .rightSide {
+    display: flex;
+    gap: 20px;
+    margin: 0;
+}
+
+.footer1 .phone,
+.footer1 .website {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+.footer1 .phone img,
+.footer1 .website img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.footer1 .website a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+.footer .footer2{
+    margin: auto;
+    text-align: center;
+    border-top: 1px solid #6e6d6d;
+    border-bottom: 1px solid #6e6d6d;
+}
+.footer .footer2 img{
+    margin: 0;
+    width: 47px;
+    padding: 10px;
+}
+.footer .footer3{
+    padding-top: 25px;
+}
+.footer .footer3 .leftSide{
+    width: 50%;
+    float: left;
+    margin: 0;
+}
+.footer .footer3 .leftSide span{
+    color: #fff;
+    font-family: sans-serif;
+}
+.footer .footer3 .rightSide{float: right;margin: 0;}
+.footer .footer3 .rightSide span{
+    color: #fff;
+    font-family: sans-serif;
+}
+.phone span{
+    color: #fff;
 }
